# RL-Group

./: .gitignore  README.md  RLI_22_A0_MountainCar.ipynb  eval-plan.md  explanation.md  info.md  notes.md  pyproject.toml  repo.md  report.md
.claude/: settings.local.json
mclib/: __init__.py
mclib/agents/: __init__.py  dqn.py  sac.py  tabular.py  td3.py
mclib/analysis/: __init__.py  evaluation.py  explain.py
mclib/envs/: __init__.py  wrappers.py
mclib/testbed/: __init__.py  runner.py
mclib/training/: __init__.py  continuous.py  loops.py
mclib/visualization/: __init__.py  plots.py
models/s1/: ddqn.pt  ddqn_eval_means.npy  ddqn_eval_stds.npy  ddqn_eval_steps.npy  ddqn_final.npy  ddqn_rewards.npy  dqn.pt  dqn_eval_means.npy  dqn_eval_stds.npy  dqn_eval_steps.npy  dqn_final.npy  dqn_rewards.npy  ql.npz  ql_eval_means.npy  ql_eval_stds.npy  ql_final.npy  ql_rewards.npy  ql_shaped.npz  ql_shaped_eval_means.npy  ql_shaped_eval_stds.npy  ql_shaped_final.npy  ql_shaped_rewards.npy  sarsa.npz  sarsa_eval_means.npy  sarsa_eval_stds.npy  sarsa_final.npy  sarsa_rewards.npy
models/s3/: dqn_fuel.pt  dqn_fuel_eval_means.npy  dqn_fuel_eval_stds.npy  dqn_fuel_eval_steps.npy  dqn_fuel_final.npy  dqn_fuel_rewards.npy  ql_fuel.npz  ql_fuel_eval_means.npy  ql_fuel_eval_stds.npy  ql_fuel_final.npy  ql_fuel_rewards.npy  ql_fuel_v2.npz  ql_fuel_v2_eval_eps.npy  ql_fuel_v2_eval_means.npy  ql_fuel_v2_eval_stds.npy  ql_fuel_v2_final.npy  ql_fuel_v2_rewards.npy  sarsa_fuel.npz  sarsa_fuel_eval_means.npy  sarsa_fuel_eval_stds.npy  sarsa_fuel_final.npy  sarsa_fuel_rewards.npy
(+41 files in other folders)
