[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rli22-mountaincar"
version = "0.1.0"
description = "RLI_22_A0 Group Assignment — Mountain Car RL"
requires-python = ">=3.11"

dependencies = [
    # Core RL
    "gymnasium>=1.2",
    "stable-baselines3>=2.8",
    "torch>=2.10",

    # Numerics & data
    "numpy>=2.2",
    "pandas>=2.3",
    "scikit-learn>=1.5",

    # Visualization
    "matplotlib>=3.10",
    "seaborn>=0.13",

    # Monitoring
    "tensorboard>=2.20",

    # Jupyter
    "ipykernel>=7.2",
    "ipywidgets>=8.1",
    "ipympl>=0.10",

    # Gym rendering
    "pygame>=2.6",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["mclib*"]
